# FFmpeg

./: .gitignore  README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/hujun/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/hujun/ffmpeg/: HJPlayer.kt  MainActivity.kt  NativeJNI.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/hujun/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
